zkay/examples/type_errors/FinalNoConstructor.sol
pragma solidity ^0.5.0;

contract FinalNoConstructor {

	final uint x;

}
